# EGH400

./: README.md  pyproject.toml
analytics/: gui.py  make_graphs.py  regression.py  summarise.py  time_stamps.py
data/: Rugbycology_dataset_v2.csv  basic_summary.csv  summarise.py
data/inputs/: filters.csv  restart_plays.csv  ruleset.csv  time stamped data.csv
data/outputs/: analysis_2.xlsx  attached_game_id.csv  basic_summary.csv  filtered_results.csv  n_values.csv
rating_optimisation/: get_outcomes.py
